--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>C'est Maylis qui teste Git</h1>
   <script src="./app.js"></script>
 </body>
 </html>
