--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="container">
+    <img src="" alt="" id="image">
+  </div>
   <script src="./app.js"></script>
 </body>
 </html>
