--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="container">
+  <div>
+    <input type="search">
+  </div>
+  <div>
+    <h2 id="title"></h2>
     <img src="" alt="" id="image">
+    <p id="actor"></p>
   </div>
   <script src="./app.js"></script>
 </body>
