--- a/index2.html
+++ b/index2.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
-
 <body>
-  <h1> Projet DataViz</h1>
-  <div> Bienvenue sur votre site de recherche cinématographique. </div>
-  <div id="acteur1"> Indiquez le nom d'un acteur ci-dessous</div>
-  <input type="text" placeholder="Entrez un nom" id="in1">
-  <button type="button" onclick="getValue1();">Valider</button>
-  <div id="acteur2">Indiquez le nom d'un autre acteur ci-dessous</div>
-  <input type="text" placeholder="Entrez un nom" id="in2">
-  <button type="button" onclick="getValue2();">Valider</button>
-
-  <script src="./app.js"></script>
+  <h1>Projet DataViz</h1>
+  <h2>Bienvenue sur votre site de recherche cinématographique.</h2>
+  <div>
+      <p id="acteur1"> Indiquez le nom d'un acteur ci-dessous</p>
+      <input type="text" placeholder="Entrez un nom" id="in1">
+      <button type="button">Valider</button>
+  </div>
+  <div>
+    <p id="acteur2">Indiquez le nom d'un autre acteur ci-dessous</p>
+    <input type="text" placeholder="Entrez un nom" id="in2">
+    <button type="button">Valider</button>
+  </div>
+  <div id="container">
+    <h3 id="name"></h3>
+    <img id="image" src="" alt="">
+    <p id="movies"></p>
+  </div>  
+  <script src="./app2.js"></script>
 </body>
 
 </html>
