--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,8 @@
     <img id="image" src="" alt="">
     <p id="movies"></p>
   </div>
+  <div id="videoTrailer"></div>
+ 
   <script src="./app2.js"></script>
 </body>
-
 </html>
