--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;800&display=swap" rel="stylesheet">
-  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <title>Find my movie</title>
 </head>
@@ -25,6 +23,9 @@
         <button type="button"  onclick="setResults1();searchPoster();searchTrailer()">Valider</button>
       </div>
     </div>
+    <div id="videoTrailer"></div>
+    <h2 class="titlePoster">Retrouvez ces acteurs dans ces films</h2>
+    <div id ="poster"></div>
     <div id="container">
       <div>
         <h3 id="nameActorOne"></h3>
@@ -38,9 +39,7 @@
       </div>
     </div>
     <div>
-      <img id="poster" src="" alt=""/>
     </div>
-    <div id="videoTrailer"></div>
     <button onClick="window.location.reload();">Refresh Page</button>
     <!-- <video id="video" src="" controls></video> -->
   </main>
